木星12.19:游戏逻辑完成